k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capstone
  labels:
    app.kubernetes.io/managed-by: kubectl
    project: cloud-native-ai-platform
    team: kl-university
